--- a/.github/workflows/stage-4-deploy-devtest.yaml
+++ b/.github/workflows/stage-4-deploy-devtest.yaml
@@ -116,16 +116,16 @@ jobs:
           param_image="dockerImageTag=${DEVTEST_PR_NUM_TAG}"
           param_tests="testTypes=[${test_types[$ENVIRONMENT_NAME]}]"
 
-          echo "Starting Azure devops pipeline \"Deploy to Azure - Core ${ENVIRONMENT_NAME}\"..."
-          RUN_ID=$(az pipelines run \
-            --branch "${BRANCH_NAME}" \
-            --commit-id "$COMMIT_SHA" \
-            --name "Deploy to Azure - Core ${ENVIRONMENT_NAME}" \
-            --org "${organisation}" \
-            --project "${project_name}" \
-            --parameters "$param_image" "$param_tests" \
-            --output tsv --query id)
+          # echo "Starting Azure devops pipeline \"Deploy to Azure - Core ${ENVIRONMENT_NAME}\"..."
+          # RUN_ID=$(az pipelines run \
+          #   --branch "${BRANCH_NAME}" \
+          #   --commit-id "$COMMIT_SHA" \
+          #   --name "Deploy to Azure - Core ${ENVIRONMENT_NAME}" \
+          #   --org "${organisation}" \
+          #   --project "${project_name}" \
+          #   --parameters "$param_image" "$param_tests" \
+          #   --output tsv --query id)
 
-          echo "Click here to view the ADO pipeline: ${organisation}/${project_name}/_build/results?buildId=${RUN_ID}"
+          # echo "Click here to view the ADO pipeline: ${organisation}/${project_name}/_build/results?buildId=${RUN_ID}"
 
-          scripts/bash/wait_ado_pipeline.sh "$RUN_ID" "${organisation}" "${project_name}" 1800
+          # scripts/bash/wait_ado_pipeline.sh "$RUN_ID" "${organisation}" "${project_name}" 1800
