--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -140,6 +140,8 @@ jobs:
 
       - name: Set Image Tags
         id: set-image-tags
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
 
           PR_NUM=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
