--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -27,7 +27,7 @@ jobs:
           cache-dependency-path: application/CohortManager/src/Web/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
 
       - name: Run Unit tests
         run: npm run test:unit
