--- a/application/CohortManager/src/Web/.github/workflows/unit-tests.yml
+++ b/application/CohortManager/src/Web/.github/workflows/unit-tests.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: lts/*
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --ignore-scripts
 
       - name: Run unit tests
         run: pnpm test
