--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "dev:secure": "next dev --turbo --experimental-https",
+    "dev": "next dev",
+    "dev:secure": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "test": "npm run test:unit",
@@ -12,12 +12,12 @@
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:e2e": "npx bddgen && npx playwright test",
-    "lint": "next lint"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "axe-playwright": "^2.1.0",
     "jwt-decode": "^4.0.0",
-    "next": "^15.5.10",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "nhsuk-frontend": "^10.0.0-internal.0",
     "react": "19.1.0",
@@ -35,7 +35,7 @@
     "@types/react-dom": "19.1.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.5.7",
+    "eslint-config-next": "^16.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "playwright-bdd": "^8.3.1",
