--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -12,7 +12,7 @@
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:e2e": "npx bddgen && npx playwright test",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint ."
   },
   "dependencies": {
     "axe-playwright": "^2.1.0",
@@ -34,7 +34,8 @@
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.1",
+    "@eslint/eslintrc": "^3.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "^16.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
