--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -121,6 +121,12 @@ jobs:
           PR_NUM_TAG="pr${PR_NUM}"
           SHORT_COMMIT_HASH=$(git rev-parse --short ${GITHUB_SHA})
 
+
+          if [ "${GITHUB_REF}" == 'refs/heads/main' ]; then
+              PR_NUM_TAG="main"
+          fi
+
+
           docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base:latest .
           docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
           docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${SHORT_COMMIT_HASH}"
@@ -151,6 +157,11 @@ jobs:
           if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
             IMAGE_TAG="${PR_NUM_TAG}"
           fi
+
+          if [ "${GITHUB_REF}" == 'refs/heads/main' ]; then
+              IMAGE_TAG="latest"
+          fi
+
           echo "Image Tag: ${IMAGE_TAG}"
 
           echo "DOTNET_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-dotnet-base:${IMAGE_TAG}" >> "${GITHUB_OUTPUT}"
